Fixed responsive issues & Customized a scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 .app {
-    min-height: 100svh;
+    height: 100svh;
     display: grid;
     grid-template-rows: auto auto 1fr auto;
 }
@@ -28,7 +28,7 @@ h1 {
     text-align: center;
     background-color: #f4a226;
     font-family: "Monoton";
-    font-size: 8vw;
+    font-size: 6rem;
     text-transform: uppercase;
     font-weight: 400;
     word-spacing: 3rem;
@@ -40,7 +40,6 @@ h1 {
     background-color: #e5771f;
     padding: 2.8rem 2rem;
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 2rem 0.8rem;
@@ -86,15 +85,28 @@ input[type="text"] {
     background-color: #5a3e2b;
     color: #ffebb3;
     padding: 4rem 2rem;
-
     display: flex;
     justify-content: space-between;
     flex-direction: column;
     gap: 3.2rem;
     align-items: center;
+    overflow-y: auto;
 }
 
-.actions button,
+.list::-webkit-scrollbar {
+    width: 0.8rem;
+}
+
+.list::-webkit-scrollbar-track {
+    margin: 0.5rem;
+}
+
+.list::-webkit-scrollbar-thumb {
+    background-color: rgba(235, 235, 235, 0.5);
+    border-radius: 20px;
+}
+
+.list .actions button,
 .list select {
     text-transform: uppercase;
     padding: 0.8rem 2.4rem;
@@ -105,11 +117,10 @@ input[type="text"] {
 
 .list ul {
     list-style: none;
-    width: 80%;
-
+    width: min(90%, 1440px);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1.2rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1.2rem 4rem;
     justify-content: center;
     align-content: start;
 }
@@ -121,18 +132,23 @@ input[type="text"] {
 }
 
 input[type="checkbox"] {
-    height: 2rem;
-    width: 2rem;
+    min-height: 2rem;
+    min-width: 2rem;
     accent-color: #e5771f;
 }
 
 .list li button {
+    margin-left: auto;
     cursor: pointer;
     background: none;
     border: none;
     font-size: 1.8rem;
     padding: 0.8rem;
     transform: translateY(1px);
+}
+
+.list .actions > select {
+    padding-right: 3.2rem;
 }
 
 .stats {
@@ -142,8 +158,36 @@ input[type="checkbox"] {
     padding: 3.2rem 2rem;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 815px) {
     html {
         font-size: 55%;
+    }
+
+    h1 {
+        font-size: 8vw;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    h1,
+    .add-form,
+    .list,
+    .stats {
+        padding: 2rem;
+    }
+
+    .add-form {
+        display: grid;
+        grid-template-columns: 0.5fr 1fr 0.5fr;
+        grid-template-rows: auto auto;
+    }
+
+    .add-form h3 {
+        grid-column: 1 / -1;
+        text-align: center;
+    }
+
+    input[type="text"] {
+        width: 100%;
     }
 }
